Forwardport fix for bug 144427 to trunk.

Also a coding style fix and remove some extraneous debug calls.

BUG:144427

svn path=/trunk/KDE/kdemultimedia/juk/; revision=811444